[gd_scene load_steps=36 format=3 uid="uid://drmp5mnwikfmw"]

[ext_resource type="Script" path="res://Assets/Scripts/gameUI.gd" id="1_yeg5d"]
[ext_resource type="Script" path="res://Assets/Scripts/gameMenuUi.gd" id="2_8yvab"]
[ext_resource type="FontFile" uid="uid://cmtjmmt0xb1l5" path="res://Assets/Graphics/Font/ThaleahFat.ttf" id="3_jkx2r"]
[ext_resource type="Texture2D" uid="uid://co8nefdkfchwg" path="res://Assets/Graphics/UI/setting_icon.png" id="3_kclm8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k01dd"]
bg_color = Color(0.290196, 0.266667, 0.258824, 1)
border_width_bottom = 5
border_color = Color(0.15, 0.1368, 0.1335, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0392157, 0.0156863, 0.00784314, 0.372549)
shadow_size = 2
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bhywg"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ha8du"]
bg_color = Color(0.7, 0.261333, 0.14, 1)
border_width_bottom = 7
border_color = Color(0.3, 0.108, 0.06, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0392157, 0.0156863, 0.00784314, 0.372549)
shadow_size = 3
shadow_offset = Vector2(3, 3)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o62l"]
bg_color = Color(0.75, 0.28, 0.15, 1)
border_width_bottom = 7
border_color = Color(0.42, 0.1568, 0.084, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0392157, 0.0156863, 0.00784314, 0.372549)
shadow_size = 3
shadow_offset = Vector2(3, 3)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g0akn"]
bg_color = Color(0.55, 0.205333, 0.11, 1)
border_width_bottom = 5
border_color = Color(0.15, 0.056, 0.03, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0392157, 0.0156863, 0.00784314, 0.372549)
shadow_size = 2
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="ImageTexture" id="ImageTexture_snxe0"]

[sub_resource type="ImageTexture" id="ImageTexture_k4j3y"]

[sub_resource type="ImageTexture" id="ImageTexture_18r6l"]

[sub_resource type="ImageTexture" id="ImageTexture_7p8yh"]

[sub_resource type="ImageTexture" id="ImageTexture_cv4w4"]

[sub_resource type="ImageTexture" id="ImageTexture_ecb3m"]

[sub_resource type="ImageTexture" id="ImageTexture_iie83"]

[sub_resource type="ImageTexture" id="ImageTexture_vh8cw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oly8i"]
bg_color = Color(0.74902, 0.278431, 0.14902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
shadow_color = Color(0, 0, 0, 0.313726)
shadow_size = 2
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v8xhc"]
bg_color = Color(0.290196, 0.266667, 0.258824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
shadow_color = Color(0, 0, 0, 0.313726)
shadow_size = 2
shadow_offset = Vector2(2, 2)
anti_aliasing = false
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_41uca"]
bg_color = Color(0.85098, 0.317647, 0.168627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
shadow_color = Color(0, 0, 0, 0.313726)
shadow_size = 2
shadow_offset = Vector2(2, 2)
anti_aliasing = false
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2ynd"]
bg_color = Color(0.74902, 0.278431, 0.14902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
shadow_color = Color(0, 0, 0, 0.313726)
shadow_size = 2
shadow_offset = Vector2(2, 2)
anti_aliasing = false
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwyjn"]
bg_color = Color(0.423529, 0.192157, 0.12549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
shadow_color = Color(0, 0, 0, 0.313726)
shadow_size = 2
shadow_offset = Vector2(2, 2)
anti_aliasing = false
anti_aliasing_size = 2.0

[sub_resource type="ImageTexture" id="ImageTexture_efs48"]

[sub_resource type="ImageTexture" id="ImageTexture_ol2oj"]

[sub_resource type="ImageTexture" id="ImageTexture_nwlc0"]

[sub_resource type="ImageTexture" id="ImageTexture_rueee"]

[sub_resource type="ImageTexture" id="ImageTexture_knu0n"]

[sub_resource type="ImageTexture" id="ImageTexture_fv34y"]

[sub_resource type="ImageTexture" id="ImageTexture_f8wox"]

[sub_resource type="ImageTexture" id="ImageTexture_2fxf3"]

[sub_resource type="ImageTexture" id="ImageTexture_386pp"]

[sub_resource type="ImageTexture" id="ImageTexture_2xgnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gk3v3"]
bg_color = Color(0.54902, 0.203922, 0.109804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
shadow_color = Color(0, 0, 0, 0.313726)
shadow_size = 2
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgc40"]
bg_color = Color(0.14902, 0.054902, 0.0313726, 1)
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.313726)
shadow_size = 2
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="Theme" id="Theme_y2x8f"]
Button/colors/font_color = Color(0.9, 0.9, 0.9, 1)
Button/colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 0.501961)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/colors/font_hover_pressed_color = Color(0.8, 0.8, 0.8, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 48
Button/fonts/font = ExtResource("3_jkx2r")
Button/styles/disabled = SubResource("StyleBoxFlat_k01dd")
Button/styles/focus = SubResource("StyleBoxFlat_bhywg")
Button/styles/hover = SubResource("StyleBoxFlat_ha8du")
Button/styles/normal = SubResource("StyleBoxFlat_2o62l")
Button/styles/pressed = SubResource("StyleBoxFlat_g0akn")
CheckBox/font_sizes/font_size = 32
CheckBox/fonts/font = ExtResource("3_jkx2r")
CheckBox/icons/checked = SubResource("ImageTexture_snxe0")
CheckBox/icons/checked_disabled = SubResource("ImageTexture_k4j3y")
CheckBox/icons/radio_checked = SubResource("ImageTexture_18r6l")
CheckBox/icons/radio_checked_disabled = SubResource("ImageTexture_7p8yh")
CheckBox/icons/radio_unchecked = SubResource("ImageTexture_cv4w4")
CheckBox/icons/radio_unchecked_disabled = SubResource("ImageTexture_ecb3m")
CheckBox/icons/unchecked = SubResource("ImageTexture_iie83")
CheckBox/icons/unchecked_disabled = SubResource("ImageTexture_vh8cw")
CheckBox/styles/disabled = SubResource("StyleBoxFlat_k01dd")
CheckBox/styles/hover = SubResource("StyleBoxFlat_ha8du")
CheckBox/styles/hover_pressed = SubResource("StyleBoxFlat_g0akn")
CheckBox/styles/normal = SubResource("StyleBoxFlat_2o62l")
CheckBox/styles/pressed = SubResource("StyleBoxFlat_g0akn")
HSlider/styles/slider = SubResource("StyleBoxFlat_oly8i")
Label/font_sizes/font_size = 32
Label/fonts/font = ExtResource("3_jkx2r")
OptionButton/font_sizes/font_size = 32
OptionButton/fonts/font = ExtResource("3_jkx2r")
OptionButton/icons/arrow = null
OptionButton/styles/disabled = SubResource("StyleBoxFlat_v8xhc")
OptionButton/styles/hover = SubResource("StyleBoxFlat_41uca")
OptionButton/styles/normal = SubResource("StyleBoxFlat_k2ynd")
OptionButton/styles/pressed = SubResource("StyleBoxFlat_qwyjn")
PopupMenu/constants/item_start_padding = 10
PopupMenu/constants/v_separation = 20
PopupMenu/font_sizes/font_size = 24
PopupMenu/fonts/font = ExtResource("3_jkx2r")
PopupMenu/fonts/font_separator = ExtResource("3_jkx2r")
PopupMenu/icons/checked = SubResource("ImageTexture_efs48")
PopupMenu/icons/checked_disabled = SubResource("ImageTexture_ol2oj")
PopupMenu/icons/radio_checked = SubResource("ImageTexture_nwlc0")
PopupMenu/icons/radio_checked_disabled = SubResource("ImageTexture_rueee")
PopupMenu/icons/radio_unchecked = SubResource("ImageTexture_knu0n")
PopupMenu/icons/radio_unchecked_disabled = SubResource("ImageTexture_fv34y")
PopupMenu/icons/submenu = SubResource("ImageTexture_f8wox")
PopupMenu/icons/submenu_mirrored = SubResource("ImageTexture_2fxf3")
PopupMenu/icons/unchecked = SubResource("ImageTexture_386pp")
PopupMenu/icons/unchecked_disabled = SubResource("ImageTexture_2xgnf")
PopupMenu/styles/hover = SubResource("StyleBoxFlat_gk3v3")
PopupMenu/styles/panel = SubResource("StyleBoxFlat_fgc40")

[node name="gameUI" type="CanvasLayer"]
script = ExtResource("1_yeg5d")

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false

[node name="SettingBG" type="ColorRect" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="SettingMenu" type="MarginContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/SettingMenu"]
layout_mode = 2
alignment = 1

[node name="ChoiceVBox" type="VBoxContainer" parent="Control2/SettingMenu/HBoxContainer"]
custom_minimum_size = Vector2(200, 140)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="backButton" type="Button" parent="Control2/SettingMenu/HBoxContainer/ChoiceVBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_y2x8f")
theme_type_variation = &"FlatButton"
text = "Back"
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="exitButton" type="Button" parent="Control2/SettingMenu/HBoxContainer/ChoiceVBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = SubResource("Theme_y2x8f")
text = "Forsake"
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
mouse_force_pass_scroll_events = false
script = ExtResource("2_8yvab")

[node name="GameMenu" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 204.0
grow_horizontal = 0
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = -16
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Control/GameMenu"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameMenu/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(200, 140)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 20

[node name="settingButton" type="Button" parent="Control/GameMenu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_y2x8f")
theme_override_constants/icon_max_width = 32
icon = ExtResource("3_kclm8")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Control2/SettingMenu/HBoxContainer/ChoiceVBox/backButton" to="." method="_on_back_setting_button_pressed"]
[connection signal="pressed" from="Control2/SettingMenu/HBoxContainer/ChoiceVBox/exitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Control/GameMenu/HBoxContainer/VBoxContainer/settingButton" to="." method="_on_setting_button_pressed"]
